--- a/index.html
+++ b/index.html
@@ -5,7 +5,344 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Landing</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css"
+      integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni"
+      crossorigin="anonymous"
+    />
   </head>
-  <body></body>
+
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-transparent py-3">
+      <div class="container-fluid">
+        <a id="nav" class="navbar-brand" href="#"
+          ><span id="company">New Energy</span></a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
+          <form class="d-flex">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a
+                  id="nav"
+                  class="nav-link active mx-3"
+                  aria-current="page"
+                  href="#"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item mx-3">
+                <a id="nav" class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item mx-3">
+                <a id="nav" class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item ml-3">
+                <a id="nav" class="nav-link" href="#">Link</a>
+              </li>
+            </ul>
+          </form>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Hero -->
+    <section class="hero py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="hero-content py-5 pr-5 pl-0">
+              <h1>The new <span>energy</span></h1>
+              <h3>...Coming soon to your city</h3>
+              <p class="pr-5 mr-5">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit
+                ratione architecto soluta, ex et accusantium. Fugiat quia ut
+                ratione molestias aliquam corporis molestiae earum explicabo.
+              </p>
+              <div class="social-icons-hero py-3">
+                <a>
+                  <div class="d-inline-block">
+                    <i class="fa fa-facebook-square p-3 mx-2"></i></div
+                ></a>
+                <a>
+                  <div class="d-inline-block p-3 mx-2">
+                    <i class="fa fa-twitter"></i></div
+                ></a>
+                <a>
+                  <div class="d-inline-block p-3 mx-2">
+                    <i class="fa fa-instagram"></i></div
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- About us -->
+    <section class="about my-3 py-3">
+      <div class="container">
+        <div class="mt-5 pt-5 row justify-content-end">
+          <div class="col-md-6 py-5 m-5">
+            <h2 class="mt-5 pt-5 section-heading">About us</h2>
+            <p class="my-3">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
+              doloremque assumenda iste eveniet dolorem, fugiat similique labore
+              sed obcaecati ex, quis animi laborum voluptatum magni autem optio
+              nam, quo nulla inventore. Ab at eos vero sunt repudiandae, nihil
+              magnam odit.
+            </p>
+            <p class="my-3">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
+              distinctio tempora fugiat eligendi sint quam in voluptate enim
+              magni vel ullam accusantium quidem aperiam, delectus cumque! Dolor
+              quasi similique culpa nihil temporibus fugiat dicta vero et
+              voluptates voluptatem commodi, eum consectetur impedit corporis
+              praesentium tempore dignissimos neque explicabo ullam! Pariatur
+              beatae quasi dolor. Deserunt ab recusandae dolorum, illo porro
+              sunt?
+            </p>
+            <a href="#" class="btn btn-main py-2 px-5">Get started</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Services -->
+    <section class="services py-3 my-3">
+      <div class="container py-2 my-2">
+        <h2 class="text-center section-heading py-5">Services</h2>
+        <div class="row py-5">
+          <div class="col-md-4">
+            <div class="m-3 p-3 shadow text-center service">
+              <div class="py-3 service-icon">
+                <i class="fa fa-fire"></i>
+              </div>
+              <div class="service-body">
+                <h3>Service</h3>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Sapiente sequi quo numquam omnis vel vitae error tempora,
+                  facilis exercitationem velit.
+                </p>
+              </div>
+            </div>
+            <div class="m-3 p-3 shadow text-center service">
+              <div class="py-3 service-icon">
+                <i class="fas fa-cloud"></i>
+              </div>
+              <div class="service-body">
+                <h3>Service</h3>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Sapiente sequi quo numquam omnis vel vitae error tempora,
+                  facilis exercitationem velit.
+                </p>
+              </div>
+            </div>
+            <div class="m-3 p-3 shadow text-center service">
+              <div class="py-3 service-icon">
+                <i class="fas fa-tachometer-alt"></i>
+              </div>
+              <div class="service-body">
+                <h3>Service</h3>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Sapiente sequi quo numquam omnis vel vitae error tempora,
+                  facilis exercitationem velit.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="m-3 p-3 shadow text-center service">
+              <div class="py-3 service-icon">
+                <i class="fas fa-battery-half"></i>
+              </div>
+              <div class="service-body">
+                <h3>Service</h3>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Sapiente sequi quo numquam omnis vel vitae error tempora,
+                  facilis exercitationem velit.
+                </p>
+              </div>
+            </div>
+            <div class="m-3 p-3 shadow text-center service">
+              <div class="py-3 service-icon">
+                <i class="fas fa-bug"></i>
+              </div>
+              <div class="service-body">
+                <h3>Service</h3>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Sapiente sequi quo numquam omnis vel vitae error tempora,
+                  facilis exercitationem velit.
+                </p>
+              </div>
+            </div>
+            <div class="m-3 p-3 shadow text-center service">
+              <div class="py-3 service-icon">
+                <i class="fas fa-address-card"></i>
+              </div>
+              <div class="service-body">
+                <h3>Service</h3>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Sapiente sequi quo numquam omnis vel vitae error tempora,
+                  facilis exercitationem velit.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="m-3 p-3 shadow text-center service">
+              <div class="py-3 service-icon">
+                <i class="fas fa-chart-area"></i>
+              </div>
+              <div class="service-body">
+                <h3>Service</h3>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Sapiente sequi quo numquam omnis vel vitae error tempora,
+                  facilis exercitationem velit.
+                </p>
+              </div>
+            </div>
+            <div class="m-3 p-3 shadow text-center service">
+              <div class="py-3 service-icon">
+                <i class="fas fa-handshake"></i>
+              </div>
+              <div class="service-body">
+                <h3>Service</h3>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Sapiente sequi quo numquam omnis vel vitae error tempora,
+                  facilis exercitationem velit.
+                </p>
+              </div>
+            </div>
+            <div class="m-3 p-3 shadow text-center service">
+              <div class="py-3 service-icon">
+                <i class="fas fa-user"></i>
+              </div>
+              <div class="service-body">
+                <h3>Service</h3>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Sapiente sequi quo numquam omnis vel vitae error tempora,
+                  facilis exercitationem velit.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact -->
+    <section class="contact">
+      <div class="container">
+        <h2 class="text-center section-heading">Contact Us</h2>
+        <div class="row justify-content-center">
+          <div class="col-md-6 text-center">
+            <form class="mt-5" action="">
+              <div class="input-group my-3">
+                <label for="">Your Email</label>
+                <input placeholder="Email" type="text" />
+              </div>
+              <div class="input-group my-3">
+                <label for="">Your Name</label>
+                <input placeholder="Name" type="text" />
+              </div>
+              <div class="input-group my-3">
+                <label for="">Your Problem</label>
+                <input placeholder="Problem Article" type="text" />
+              </div>
+              <div class="input-group my-3">
+                <label for="">Your Message</label>
+                <textarea
+                  placeholder="Your message"
+                  name=""
+                  id=""
+                  cols="30"
+                  rows="5"
+                ></textarea>
+              </div>
+              <button class="btn btn-main py-2 px-5">Send</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="footer py-5 my-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h2 class="section-heading">New Energy</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum
+              officiis blanditiis repellendus, reiciendis voluptatem saepe
+              consequatur voluptatum corporis nemo nesciunt praesentium laborum
+              voluptates autem soluta, quisquam natus distinctio aperiam vel?
+            </p>
+            <div class="social-icons-hero py-3">
+              <a>
+                <div class="d-inline-block">
+                  <i class="fa fa-facebook-square p-1 mx-1"></i></div
+              ></a>
+              <a>
+                <div class="d-inline-block p-1 mx-1">
+                  <i class="fa fa-twitter"></i></div
+              ></a>
+              <a>
+                <div class="d-inline-block p-1 mx-1">
+                  <i class="fa fa-instagram"></i></div
+              ></a>
+            </div>
+          </div>
+        </div>
+        <p>Made by Emre Pirci &copy; 2021</p>
+      </div>
+    </section>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/fcae3982c5.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
